css/pages/home.css
/* Hero Section */
@import "/css/pages/home2.css";
.hero {
  min-height: fit-content;
  position: relative;
  display: flex;
  align-items: start;
  max-width: none;
  overflow: hidden;
}

.hero-carousel {
  height: calc(100dvh - var(--nav-height));
  width: 100%;
  position: relative;
  max-width: none;
  overflow: hidden;
  display: flex;
}

.hero-slide {
  position: absolute;
  inset: 0px;
  min-height: 60vh;
  display: flex;
  align-items: center;
  width: 100%;
  opacity: 0;
  transform: translateX(calc(100%));
  transition: transform 1s ease-in-out;
  z-index: 1;
}

.hero-carousel .container{
  width: 100%;
  max-width: 1280px;
  margin: 0 auto;
  position: absolute;
  z-index: 5;
  padding: 0 20px;
  height: 100%;
}


.hero-slide.active{
  opacity: 1;
  transform:translateX(0) ;
  z-index: 2;
}
.hero-slide.exit{
  opacity: 1;
  z-index: 1;
  transform: translateX(calc(-100%));
}

.hero-slide img {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit:cover;
  object-position: top;
  z-index: 0;
}
.hero-slide::after{
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.447);
}


.hero-content {
  position: relative;
  /* max-width: 600px; */
  color: var(--color-light);
  text-align: center;

  /* check */
  display: flex;
  flex-direction: column;
  /* justify-content: space-around; */
  justify-content: center;
  align-items: center;
  /* check */
  height: 100%;
}

.hero-content h2 {
  font-size: 3.2rem;
  font-weight: 600;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.hero-content p {
  font-size: 1rem;
  max-width: 520px;
  margin-bottom: 2rem;
  color: #f0f0f0;
  line-height: 1.7;
}

.hero-actions {
  display: flex;
  gap: 1rem;
}

.hero-badge {
  display: inline-block;
  margin-bottom: 1rem;
  padding: 0.35rem 0.8rem;
  font-size: 0.75rem;
  font-weight: 500;
  letter-spacing: 0.05em;

  color: var(--color-light);
  border: 1px solid rgba(255, 255, 255, 0.6);
  border-radius: 20px;
}

.hero-actions .btn {
  padding: 0.75rem 1.6rem;
  border: 1px solid var(--color-light);
  color: var(--color-light);
}

#freeTrial{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  padding: 30px 10px;
  width: 100%;
  background: linear-gradient(#f7f4f0);
  text-align: center;
  gap:15px;
  border-bottom:1px solid #be9a5724;
}

.homeTheme{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  background:linear-gradient(to right,#d5ae67 ,#BE9A57);
  color: white;
  padding: 5px 10px;
  border-radius: 20px;
  box-shadow: 2px 4px 6px 1px rgb(156, 156, 156);
}
.homeTheme2{
  border-radius: 50%;
  background:linear-gradient(120deg,#dbb97f 20% , #BE9B57 );
  min-width: 50px;
  max-width: 50px;
  max-height: 50px;
  min-height: 50px;
  font-size: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.promiseBox{
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  text-align: center;
  border: 1px solid #C09C5A;
  width: clamp(60%,70vw,90%);
  gap: 20px;
  border-radius: 20px;
  box-shadow: 2px 4px 10px 1px rgb(156, 156, 156);
  padding: 15px 20px;
  background-color: white;
}
.bxContainer{
  display: grid;
  align-items: stretch;
  grid-template-columns: repeat(3,1fr);
  width: 100%;
  height: 50%;
  row-gap: 15px;
  column-gap: 25px;
}
.boxItems{
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 10px;
  height: 100%;
  flex-direction: column;
  border: 1px solid #C09C5A;
  min-width: 30%;
  padding: 25px 30px;
  border-radius: 20px;
  background: white;
  box-shadow: 2px 2px 5px 1px gray;
  flex: 0 0 50px; 
}
.pHd{
  font-family: var(--font-footer-heading);
  font-size: 14px;
  font-weight: 100;
}
.pBd{
  font-family: var(--font-primary);
  font-size: 12px;
  color: rgba(128, 128, 128, 0.944);
}
.noRush{
  grid-column: 1/-1;
  background-color: #F8EDDA;
  border: 1px solid #C09C5A;
  border-radius: 10px;
  font-size: 12px;
  padding: 10px 5px;
  color: rgb(77, 76, 76);
}
.noRush span{
  color :#C09C5A;
}

#ourWork{
  width: 100%;
  height: 100vh;
  background-color: #F7F4F0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap:30px;
  align-items: center;
  text-align: center;
  padding: 10px;
  border-bottom: 1px solid #c5a26062;
}
#ourWork p{
  font-size: 14px;
  color: gray;
}
#ourWork .imageContainer{
  /* height: 70%;
  border:1px solid black; */
  display: flex;
    align-items: center;
    position: relative;
    width: 90%;
    max-width: 1400px;
  justify-content: center;
}
#ourWork .imageContainer .smlCarousel{
  overflow: hidden;
  width: 100%;
}
#ourWork .viewGallery{
  background:linear-gradient(90deg,#eec784,#CEAA6C);
  color: var(--color-light);
  padding: 0.3rem 0.6rem;
  font-size: 1rem;
  border: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}
#ourWork .viewGallery i{
  transform: translateX(-2px);
}
#ourWork .car-slide{
    flex: 0 0 100%;
    padding: 5px;
}
#ourWork .car-slide img {
    width: 100%;
    height: 300px; /* Fixed height for uniformity */
    object-fit: cover;
    border-radius: 8px;
    display: block;
}
#ourWork .galleryTrack{
  display: flex;
  justify-content: start;
  align-items: center;
  list-style: none;
  transition: transform 0.4s ease-in-out;
}
.slide-btn{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  border-radius: 50%;
  height: 40px;
  width: 40px;
  background-color: #fefcfbce;
  border: 0px;
  color: #B8954F;
  cursor: pointer;
  border: 1px solid #B8954F;
}
#preBtn{
  position: absolute;
  left: -12px;
  z-index: 5;
}
#nexBtn{
  position: absolute;
  right: -12px;
  z-index: 5;
}

#ourTestimonials{
  width: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #FCF9F5;
  gap: 20px;
  padding: 40px 20px;
  border-bottom: 1px solid #c5a26062;

}
#testPreBtn{
  position: absolute;
  left:-20px;
  top: 50%;
  transform: translateY(-50%);
}
#testNexBtn{
  position: absolute;
  right: -20px;
  top: 50%;
  transform: translateY(-50%);
}
#ourTestimonials .testContainer{
  text-align: left;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(247, 244, 243);
  position: relative;
  border-radius: 20px;
  width: 90%;
  box-shadow: 5px 5px 10px 2px gray;
  max-width: 1200px;
}
#ourTestimonials .trackContainer{
  overflow: hidden;
  width: 100%;
}
#ourTestimonials .testTrack{
  border-radius: 20px;
 overflow: hidden;
  list-style: none;
  display: flex;
  justify-content: start;
  align-items: center;
  height: 100%;
}
#ourTestimonials .testTrack .OTslide{
  display: none;
  flex: 0 0 100%;
  align-items: flex-start;
  gap: 10px;
  padding: 20px;
}
#ourTestimonials .testTrack .OTslide.active{
  display: flex;
  flex: 0 0 100%;
  align-items: flex-start;
}
#ourTestimonials .testimonial-image-container {
  /* flex: 0 0 350px; */
  /* height: 200px; */
  position: relative;
  overflow: hidden;
  border-radius: 10px;
}
#ourTestimonials img{
  width: 100%;
  height: 100%;
  aspect-ratio: 1 / 1;
  object-fit: cover;
}
#ourTestimonials .client-name{
    color: var(--color-primary);
}
#ourTestimonials footer {
    border-top: 1px solid #eee;
    padding-top: 12px;
    margin-top: 12px;
}
#ourTestimonials .testBtn{
  padding: 10px;
  color: var(--color-primary);
  background-color: white;
  border: 1px solid var(--color-primary);
  border-radius: 10px;
  text-decoration: none;
}
.slide-dots{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}
.slide-dots .dot{
  height: 10px;
  width: 10px;
  border-radius: 50%;
  background-color: #E8DAC7;
  transition: width 0.2s ease-in-out;
}
.slide-dots .dot.active{
  border-radius: 10px;
  width: 25px;
  background-color: #BE9A57;
}
@media(hover: hover){
  #ourWork .viewGallery:hover{
  background:linear-gradient(270deg,#eec784,#CEAA6C);

}
  #ourWork .viewGallery:hover i{
  transform: translateX(0px);

}
#ourTestimonials .testBtn:hover{
  cursor: pointer;
  color: black;
  background-color: #F5EAD7;

}
}
.heroHead{
    font-size: 54px;
  }
/* Hero Section Responsive Styles */
@media (max-width: 768px) {
  /* .hero {
    min-height: 70vh;
  } */
   #ourTestimonials img{
  object-position: top;
  aspect-ratio: 6/4;
  }
  #ourTestimonials .OTslide{
    flex-direction: column;
  }
  #ourTestimonials .testContainer{
    font-size: 0.8rem;
  }

  .hero-content {
    text-align: center;
    max-width: 100%;
  }

  .hero-content h2 {
    font-size: 2.2rem;
  }

  .hero-content p {
    font-size: 0.95rem;
    margin-left: auto;
    margin-right: auto;
  }

  .hero-actions {
    flex-direction: column;
    align-items: center;
  }

  .hero-actions .btn {
    width: 100%;
    max-width: 260px;
  }
  .promiseBox{
    font-size: 12px;
    width: 95%;
  }
  .bxContainer{
    grid-template-columns: 1fr;
  }
  .boxItems{
    flex-direction: row;
    text-align: left;
    padding: 10px 10px;
    gap: 10px;
    /* max-width: 80%; */
  }
  .homeTheme2{
    min-width: 50px;
    max-width: 50px;
  }
  .noRush{
    width: 100%;
    font-size: 10px;
  }
  .heroHead{
    font-size: 36px;
  }
}
@media (min-width: 600px) {
    #ourWork .car-slide { flex: 0 0 50%; }
}

@media (min-width: 900px) {
    #ourWork .car-slide { flex: 0 0 33.3333%; }
}

/* Large Desktops: Show 4 images */
@media (min-width: 1200px) {
    #ourWork .car-slide { flex: 0 0 25%; }
}

p,span{
  font-family:var(  --font-primary);
}
h1,h3{
  font-family: var(--font-footer-heading);
  font-weight: 100;
}

